<?xml version="1.0"?>
<package format="3">
  <name>rosettadds_ros2_perf_helper</name>
  <version>0.0.1</version>
  <description>ROS 2 helper node for ROSettaDDS Unity performance measurements.</description>
  <maintainer email="ojii3@example.invalid">OJII3</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
